[package]
name = "rybot2"
version = "0.2.1"
authors = ["ry755"]
edition = "2018"
build = "build.rs"

[build-dependencies]
anyhow = "1.0"
vergen = "5"

[dependencies]
image = "0.23.12"
libwebp = { version = "0.1.2", features = ["0_6"] }
error-chain = "0.12.4"
tempfile = "3.1.0"
reqwest = { version = "0.11", features = ["json"] }

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.songbird]
version = "0.2.0"

[dependencies.serenity]
version = "0.10"
features = ["builder", "cache", "client", "framework", "standard_framework", "rustls_backend", "http"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
